<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uvc_camera</name>
  <version>0.3.0</version>
  <description>
     A collection of nodes that stream images from USB cameras (UVC)
     and provide CameraInfo messages to consumers. Includes a
     two-camera node that provides rough synchronization for stereo vision.
     Supports the See3CAM extensions for selecting the trigger mode.
     Uses the base driver from Morgan Quigley's uvc_cam package.

     Is a migration from the package written by David Gossow for ROS
     to ROS2 to use the Tara Stereo Camera. The migration isn't done
     for the whole package, just the necessary to use that camera.
  </description>

  <author email="email_address@not.public">Lautaro Rinaldi</author>
  <author email="email_address@not.public">Alejandro Rivosecchi</author>
  <author email="dgossow@gmail.com">David Gossow</author>
  
  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_uvc_camera.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
